<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:key="SwitchPreferenceCompat"
        app:title="Enable message notifications"/>

    <Preference
        app:key="Preference"
        app:title="Send feedback"
        app:summary="Report technical issues or suggest new features"/>

    <CheckBoxPreference app:key="CheckBoxPreference" app:title="Checkbox Preference">
    </CheckBoxPreference>

    <SeekBarPreference app:key="SeekBarPreference" app:title="Seekbar Preference">
    </SeekBarPreference>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="EditTextPreference"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="ListPreference"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="SwitchPreferenceCompat2"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="SwitchPreferenceCompat2"
            app:key="SwitchPreferenceCompat3"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>